# api/docs/swagger.json
@@ -219,15 +219,6 @@
                     "dashboard"
                 ],
                 "summary": "Get the revenue by Tariff",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Gym ID",
-                        "name": "gym_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -464,15 +455,6 @@
                     "dashboard"
                 ],
                 "summary": "Get users by tariff",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Gym ID",
-                        "name": "gym_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
